# fake2db

./: Dockerfile  Pipfile  README.md  init.sh  pyproject.toml
.github/workflows/: build-images.yml
fake2db/: fake2db.py  mysql_handler.py  postgresql_handler.py
