[tool.poetry]
name = "fake2db"
version = "0.1.0"
description = ""
authors = ["Manan Shah <manan@decalab.io>"]

[tool.poetry.dependencies]
python = "^3.7"
psycopg2 = "^2.8.5"
Faker = "^4.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
